# skills

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
schemas/: config.schema.json  skills-lock.schema.json  skills.schema.json
src/: agents.rs  cli.rs  config.rs  error.rs  github.rs  install.rs  lib.rs  lock.rs  main.rs  registry.rs  ui.rs
src/commands/: add.rs  config.rs  create.rs  find.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  update.rs
tests/: cli.rs  schema_validation.rs
