[package]
description = ""
edition = "2024"
license = "MIT"
name = "skills"
repository = "https://github.com/smartcrabai/skills"
version = "0.1.0"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[dependencies]
tokio = { version = "1.52.1", features = ["rt", "macros"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
