[package]
description = ""
edition = "2024"
license = "MIT"
name = "skills"
repository = "https://github.com/smartcrabai/skills"
version = "0.1.0"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
indicatif = "0.18.4"
reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.2"
tabled = "0.20.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
